<resources>
    <string name="app_name">安全管家</string>
    <string name="login_forgetpassword">忘记密码</string>
    <string name="reset_forgetpassword">正在重置</string>
    <string name="changing_password">正在修改</string>
    <string name="changepassword">更换密码</string>
    <string name="oldpsw_error">当前密码输入错误</string>
    <string name="changepsw_fail">密码修改失败，请重新尝试！</string>
    <string name="login_forgetpassword_mail">密码重置邮件已发送至邮箱</string>
    <string name="login_forgetpassword_mailfail">密码重置失败,请重新尝试！</string>
    <string name="login">登　录</string>
    <string name="loginnopadding">登录</string>
    <string name="register">注　册</string>
    <string name="user">账　号</string>
    <string name="user_hint">请输入注册邮箱</string>
    <string name="password">密　码</string>
    <string name="password_hint">请输入密码</string>
    <string name="hasuserID">已有账号？</string>
    <string name="ok">确　定</string>
    <string name="isnotmail">请以邮箱作为用户名进行注册</string>
    <string name="infoisnocomplete">请将信息填写完整</string>
    <string name="passwordnotequal">两次密码输入不一致</string>
    <string name="default_nick">安全小粉丝</string>
    <string name="default_msg">保护手机数据就用安全管家</string>
    <string name="onregister">用户信息正在注册</string>
    <string name="register_success">账号注册成功，请尽快激活</string>
    <string name="default_error">注册失败，请重新确认注册信息</string>
    <string name="netfail">连接网络失败！</string>
    <string name="username_exist">该邮箱已被注册！</string>
    <string name="username_empty">请填写完整的用户名</string>
    <string name="password_empty">请将密码填写完整</string>
    <string name="load_userinfo">正在加载用户信息</string>
    <string name="userinfo_empty">用户名或密码错误</string>
    <string name="encrypt_success">文件加密成功</string>
    <string name="encrypt_fail">文件加密失败</string>
    <string name="decrypt_success">文件解密成功</string>
    <string name="decrypt_fail">文件解密失败</string>
    <string name="loading_appinfo">正在加载应用信息</string>
    <string name="please_inputpsw">请输入短密码</string>
    <string name="password_error">密码错误</string>
    <string name="sms_send">加密发送</string>
    <string name="sms_read">解密查看</string>
    <string name="sms_content">加解密内容:</string>
    <string name="sms_encryptionkey">请输入加密密钥</string>
    <string name="sms_decryptionKey">请输入解密密钥</string>
    <string name="activitynofind">您请求的界面不存在</string>
    <string name="systemmailnofind">请安装邮件应用</string>
    <string name="give_me_advice">请输入您的意见</string>
    <string name="gice_me_pic">图片附件</string>
    <string name="submit">提　交</string>
    <string name="advice_submitting">感谢您宝贵意见</string>
    <string name="advice_fail">意见反馈失败</string>
    <string name="advice_success">意见反馈成功</string>
    <string name="advice_fileupload_fail">附件上传失败</string>
    <string name="load_data">正在同步数据,请稍后</string>
    <string name="new_data">新建文件</string>
    <string name="new_dataing">文件正在创建</string>
    <string name="new_data_fail">文件创建失败，请重新尝试！</string>
    <string name="title">标　题:</string>
    <string name="content">内　容:</string>
    <string name="time">保存时间:</string>
    <string name="synchronization">同　步</string>
    <string name="dialog_positive">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_deletemsg">是否删除该记录 ？</string>
    <string name="delete_fail">删除失败</string>
    <string name="data_update_success">数据更新成功</string>
    <string name="upload_file">正在上传文件</string>
    <string name="upload_filefail">文件上传失败</string>
    <string name="upload_filefail_emptysuffix">不支持后缀名为空的文件</string>
    <string name="upload_filesavafail">文件存储失败</string>
    <string name="download_file">正在下载文件</string>
    <string name="delete_file">删除同步文件中</string>
    <string name="download_filesuccess">下载文件成功,\n文件保存于/SfDown中</string>
    <string name="download_filefail">下载文件失败</string>
    <string name="nick">昵称</string>
    <string name="user_id">账号</string>
    <string name="sex">性别</string>
    <string name="msg">个性签名</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="save">保存</string>
    <string name="headupdate_fail">头像更新失败</string>
    <string name="function_open">开启</string>
    <string name="chpsw_old">旧密码：</string>
    <string name="chpsw_oldhint">请输入当前密码！</string>
    <string name="chpsw_newhint">新密码不能为空</string>
    <string name="chpsw_newhint1">两次密码输入不一致</string>
    <string name="chpsw_new1">新密码：</string>
    <string name="chpsw_new2">确认密码：</string>
    <string name="chpsw_ok">确认修改</string>
    <string name="config_shortnum">请设置解锁应用密码</string>
    <string name="functionisnavai">应用锁功能不可用</string>
    <string name="alert_not">为确保您能使用应用锁需要打开该选项,点我！</string>
    <string name="alert_again">请在权限管理中心为应用开启悬浮窗权限</string>
    <string name="exit">退　出</string>
    <string name="shortcodeisemp">请输入应用解锁密码！</string>
    <string name="shortcodeisshort">请输入6位应用解锁密码！</string>
    <string name="exitapp">是否退出？</string>
    <string name="preparechat">正在初始化聊天模块,请稍后.</string>
    <string name="chatto">请输入您要进行聊天的好友账号</string>
    <string name="chathistory">聊天历史</string>
    <string name="findthispeople">检索用户信息</string>
    <string name="peopleisnotexist">该用户不存在！</string>
    <string name="encryptingfile">正在加密文件，请稍后...</string>
    <string name="decryptingfile">正在解密文件，请稍后...</string>
    <string name="copy">复制</string>
    <string name="file_copy">文件分享地址复制成功</string>
    <string name="delete">删除</string>
    <string name="smdata_copy">私密记录复制成功</string>
    <string name="open_floattingwindow_tip">请在系统设置中为应用添加悬浮窗权限</string>
    <string name="tip">提示</string>
</resources>
