<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/activity_base_title_back" />


        <TextView
            style="@style/chpswtextviewstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/chpsw_old" />

        <EditText
            android:id="@+id/chpsw_oldpsw"
            style="@style/chpsw_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/chpsw_oldhint"
            style="@style/chpswhinttyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="@string/chpsw_oldhint"
            android:visibility="invisible" />

        <TextView
            style="@style/chpswtextviewstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/chpsw_new1" />

        <EditText
            android:id="@+id/chpsw_newpsw"
            style="@style/chpsw_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/chpsw_newhint"
            style="@style/chpswhinttyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="@string/chpsw_newhint"
            android:visibility="invisible" />

        <TextView
            style="@style/chpswtextviewstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/chpsw_new2" />

        <EditText
            android:id="@+id/chpsw_newpsw1"
            style="@style/chpsw_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/chpsw_newhint1"
            style="@style/chpswhinttyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="@string/chpsw_newhint1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/chpsw_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/select_loginbtn_bg"
            android:text="@string/chpsw_ok"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/id_root"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"/>
</RelativeLayout>
