<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <include layout="@layout/activity_base_title_back"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/id_root"
        android:layout_marginTop="50dp"/>

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_head"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:placeholderImage="@drawable/default_head"
        app:placeholderImageScaleType="fitCenter"
        app:roundAsCircle="true"
        app:roundingBorderColor="#888"
        app:roundingBorderWidth="2dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:gravity="center_vertical"
        android:layout_marginTop="230dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="18sp"
            android:textColor="@color/depgrep"
            android:layout_marginLeft="8dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:layout_marginLeft="8dp"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:singleLine="true"
            android:textSize="17sp"
            android:textColor="@color/color1"
            android:background="@android:color/transparent"
            android:hint="@string/user_hint"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:gravity="center_vertical"
        android:layout_marginTop="275dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/depgrep"
            android:layout_marginLeft="8dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:layout_marginLeft="8dp"/>

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:singleLine="true"
            android:textSize="17sp"
            android:textColor="@color/color1"
            android:background="@android:color/transparent"
            android:hint="@string/password_hint"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:gravity="center_vertical"
        android:layout_marginTop="320dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/depgrep"
            android:layout_marginLeft="8dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:layout_marginLeft="8dp"/>

        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:singleLine="true"
            android:textSize="17sp"
            android:textColor="@color/color1"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:hint="@string/password_hint"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btn_regeist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="130dp"
        android:background="@drawable/select_loginbtn_bg"
        android:textColor="#fff"
        android:text="@string/register"
        android:textSize="18sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color1"
            android:text="@string/hasuserID"
           />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginnopadding"
            android:textColor="@color/color2"
            android:background="@drawable/stroke_blue_bg"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

</RelativeLayout>
