<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_base_title_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/sms_content"
                android:textSize="18sp"
                android:textColor="@color/color3"/>

            <EditText
                android:id="@+id/sms_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="@color/color2"
                android:gravity="left"
                android:minLines="10" />

            <Button
                android:id="@+id/sms_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/select_enable_bg"
                android:enabled="false"
                android:text="@string/sms_send"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <Button
                android:id="@+id/sms_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/select_enable_bg"
                android:text="@string/sms_read"
                android:textColor="@color/white"
                android:enabled="false"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
