<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <FrameLayout
        android:id="@+id/id_root"
        android:layout_width="match_parent"
        android:layout_height="80dp" />


    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_head"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        app:placeholderImage="@drawable/rc_ic_def_msg_portrait"
        app:placeholderImageScaleType="fitCenter"
        app:roundAsCircle="true"
        app:roundingBorderColor="#888"
        app:roundingBorderWidth="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/circleround_grey_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="6dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/user" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#88666666" />

        <EditText
            android:id="@+id/et_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/user_hint"
            android:singleLine="true"
            android:textColor="#aaffffff" />

        <ImageView
            android:id="@+id/iv_userdelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/user_delete"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/circleround_grey_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="6dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/password" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#88666666" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#aaffffff" />

        <ImageView
            android:id="@+id/iv_passwordeye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/password_eye"
            android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/select_loginbtn_bg"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="40dp"
        android:text="@string/login_forgetpassword"
        android:textColor="@color/warnred"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:text="@string/register"
        android:textColor="@color/warnred"
        android:textSize="15sp" />


</RelativeLayout>
