<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/advice_bg"
    >

    <include layout="@layout/activity_base_title_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/give_me_advice"
                android:textColor="@color/color2"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/advice_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal|bottom"
                android:lines="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/gice_me_pic"
                android:textColor="@color/color2"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/advice_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:maxWidth="320dp"
                android:src="@drawable/default_pic_s" />

            <Button
                android:id="@+id/advice_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/select_enable_bg"
                android:enabled="false"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/id_root"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"/>

</RelativeLayout>
